réorganisation du code du projet

--- a/old/Accueil.html
+++ b/old/Accueil.html
@@ -30,7 +30,7 @@
 		 
 			<center><p class="os"><b>THE WOKTCHOP COORPORATION</b></p>
 		<p class="ss">The future is now!!</p></center><br><br>
-		<img id="image" src="style/font.jpg" height="0px" width="100%">
+		<img id="image" src="style/image/font.jpg" height="0px" width="100%">
 	<div id="content">
 
 
@@ -38,7 +38,7 @@
 
 	<div class="center">     
 		<div class="img">
-			<img src="ss.jpg">
+			<img src="style/image/ss.jpg">
 			<div class="container">
 				<div class="content">
 					<h1>Pourquoi nous sommes les meilleurs?</h1>
@@ -51,7 +51,7 @@
 
 	<div class="yes">
 		<div class="img1">
-			<img src="h.jpg">
+			<img src="style/image/h.jpg">
 			<div class="contain">
 				<div class="conten">
 					<h1>De bons enseignants au service des élèves!!</h1>
