--- a/old/menu.html
+++ b/old/menu.html
@@ -2,9 +2,6 @@
 <html>
 <head>
 	<title>Menu</title>
-	<script src="jquery.js"> </script>
-	<script src="jquery2.js"></script>
-
 	<style type="text/css">
 		
 		body{
@@ -23,7 +20,7 @@
 
 	
 	.base{
-		background:url("bon.jpg");
+		background:url("style/image/bon.jpg");
 			background-size: 100% 100% ;
 			margin: 0;
 			padding: 0;
