--- a/old/tableauV.html
+++ b/old/tableauV.html
@@ -7,7 +7,7 @@
 	<style type="text/css">
 		.conteneur{
 			overflow: hidden;
-			background: url("enr.jpg");
+			background: url("style/image/enr.jpg");
 			height:700px;
 			background-size: 100%;
 		}
