--- a/old/inscription.html
+++ b/old/inscription.html
@@ -7,7 +7,7 @@
 		body{
 			margin:0;
 			padding: 0;
-			background: url("font.jpg");
+			background: url("style/image/font.jpg");
 			background-size:100%;
 			font-family: sans-serif;
 
@@ -95,7 +95,7 @@
 <body>
 
 	  <div class="login">
-	  	<img src="logo.jpg" class="avatar" style="border-radius: 50%;">
+	  	<img src="style/image/logo.jpg" class="avatar" style="border-radius: 50%;">
 
 	  	<h1>CONNEXION</h1>
 	  	<form>
