--- a/old/Accueil.html
+++ b/old/Accueil.html
@@ -11,17 +11,16 @@
 </head>
 <body>
 
-	</div>
+	<div>
 
 	<header>
 		<div class="header">
 		 <div class="navi" id="nav">
 		 	<ul>
-		 		<li><a href=""> Acceuil</a></li>
-		 		<li><a href="">Presentation</a></li>
-		 		<li><a href="">Nos filières</a></li>
-		 		<li><a href="">Informations</a></li>
-		 		<li><a href="">Espace parent</a></li>
+		 		<li><a href="Accueil.html"> Acceuil</a></li>
+		 		<li><a href="presentation.html">Presentation</a></li>
+		 		<img src="style/image/vogt.jpg">
+		 		<li><a href="parent.html">Espace parent</a></li>
 		 		<li><a href="inscription.html">CONNEXION</a></li>
 
 		 	</ul>
