--- a/old/VUE JS/aaa.html
+++ b/old/VUE JS/aaa.html
@@ -34,26 +34,31 @@
 				{{ todo.text }}
 			</li>
 		</ol>
-	</div>		
+	</div>	
+
+	<div id="app-5">
+		<p>{{ message }}</p>
+		<button v-on:click="reverseMessage">Reverse Message</button>
+	</div>	
 
 
 	<div id="app-6">
-	  <p>{{ message }}</p>
-	  <input v-model="message">
+		<p>{{ message }}</p>
+		<input v-model="message">
 	</div>
 
 
 
 
 	<div id="app-7">
-  <ol>
-    
-    <todo-item
-      v-for="item in groceryList"
-      v-bind:todo="item"
-      v-bind:key="item.id">
-    </todo-item>
-  </ol>
+		<ol>
+			
+			<todo-item
+			v-for="item in groceryList"
+			v-bind:todo="item"
+			v-bind:key="item.id">
+		</todo-item>
+	</ol>
 </div>
 
 
@@ -92,29 +97,40 @@
 		}
 	})
 
+	var app5 = new Vue({
+		el: '#app-5',
+		data: {
+			message: 'Hello Vue.js!'
+		},
+		methods: {
+			reverseMessage: function () {
+				this.message = this.message.split('').reverse().join('')
+			}
+		}
+	})
 
 	var app6 = new Vue({
-	  el: '#app-6',
-	  data: {
-	    message: 'Hello Vue!'
-	  }
+		el: '#app-6',
+		data: {
+			message: 'Hello Vue!'
+		}
 	})
 
 
 	Vue.component('todo-item', {
-	  props: ['todo'],
-	  template: '<li>{{ todo.text }}</li>'
+		props: ['todo'],
+		template: '<li>{{ todo.text }}</li>'
 	})
 
 	var app7 = new Vue({
-	  el: '#app-7',
-	  data: {
-	    groceryList: [
-	      { id: 0, text: 'Vegetables' },
-	      { id: 1, text: 'Cheese' },
-	      { id: 2, text: 'Whatever else humans are supposed to eat' }
-	    ]
-	  }
+		el: '#app-7',
+		data: {
+			groceryList: [
+			{ id: 0, text: 'Vegetables' },
+			{ id: 1, text: 'Cheese' },
+			{ id: 2, text: 'Whatever else humans are supposed to eat' }
+			]
+		}
 	})
 
 
