--- a/old/VUE JS/composant.html
+++ b/old/VUE JS/composant.html
@@ -1,45 +1,82 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<script src="vue.js"></script>
+    <title></title>
+    <script src="vue.js"></script>
 </head>
 <body>
 
 
-	<div class="bon" id="bie">
+<div class="bon" id="bie">
 
-		<ul>
+    <ul>
 
-		<li><a href="acueil.html"><message type="error" :message='message'></message></a></li>
-		<li><a href="presentation.html"><message type="error" :message='message1'></message></a></li>
-		<li><a href="parent.html"><message type="error" :message='message2'></message></a></li>
-		<li><a href="inscription.html"><message type="error" :message='message3'></message></a></li>
-		</ul>
-	</div>
+        <li><a href="acueil.html">
+            <message type="error" :message='message'></message>
+        </a></li>
+        <li><a href="presentation.html">
+            <message type="error" :message='message1'></message>
+        </a></li>
+        <li><a href="parent.html">
+            <message type="error" :message='message2'></message>
+        </a></li>
+        <li><a href="inscription.html">
+            <message type="error" :message='message3'></message>
+        </a></li>
+    </ul>
+</div>
+
+<div id="daniel-barre-navigation-div">
+    <barredenavigation :tableauelementsnavigation="elementsBarreNavigation"></barredenavigation>
+</div>
 
 </body>
 
 
-	<script type="text/javascript">
+<script type="text/javascript">
 
-	Vue.component('message', {
+    Vue.component('message', {
 
-		props: ['type' , 'message'], 
+        props: ['type', 'message'],
 
-		template: '<div class="bon" :class="type">{{ message }}</div>',
-		
-	})
+        template: '<div class="bon" :class="type">{{ message }}</div>',
 
-	let vm = new Vue({
-		el:'#bie',
-		data:{message:'Accueil',
-		message1:'presentation',
-		message2:'Espace parent',
-		message3:'Connexion',
+    });
 
-	},
-	})
- </script>
+
+
+
+    let vm = new Vue({
+        el: '#bie',
+        data: {
+            message: 'Accueil',
+            message1: 'presentation',
+            message2: 'Espace parent',
+            message3: 'Connexion',
+
+        },
+    });
+
+    Vue.component('barredenavigation', {
+        props: ['tableauelementsnavigation'],
+        template: '<div class="flex-container" style="display: flex; justify-content: space-evenly"> ' +
+        '<a v-for="element in tableauelementsnavigation" :href="element.urlLink"> {{element.text}}</a>' +
+        '</div>'
+    });
+
+    let danielBarreNavigationDiv = new Vue({
+        el: '#daniel-barre-navigation-div',
+        data: {
+            elementsBarreNavigation: [
+                {text: 'Accueil', urlLink: 'accueil.html'},
+                {text: 'Presentation', urlLink: 'presentation.html'},
+                {text: 'Espace parent', urlLink: 'parent.html'},
+                {text: 'Connexion', urlLink: 'inscription.html'},
+            ]
+
+        },
+    });
+
+</script>
 
 </html>
