toutes les pages

--- a/old/VUE JS/daniel/stage_app.html
+++ b/old/VUE JS/daniel/stage_app.html
@@ -5,6 +5,7 @@
     <script src="../vue.js"></script>
     <script src="../vue-router.js"></script>
     <link rel="stylesheet" type="text/css" href="stage_app.css">
+    <link rel="stylesheet" type="text/css" href="oui.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
